# nonar

./: .gitignore  50-nonar.rules  Cargo.toml  README.md  install.nu  nonar.service
.github/workflows/: ci.yml
linux/: nonar.service
macos/: nonar.plist
src/: chatmix.rs  error.rs  main.rs
src/chatmix/: linux.rs  macos.rs  mod.rs
src/device/: mod.rs  nova_7.rs  nova_pro_wireless.rs
