[package]
name = "nonar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
ctrlc = { version = "3.5.0", features = ["termination"] }
hidapi = { version = "2.6.3", default-features = false, features = ["linux-static-hidraw", "macos-shared-device", "windows-native"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2.17"
core-foundation = "0.10.1"
